Removed more extraneous code, added GPL licensing.

--- a/lib/mobile-menu/style.css
+++ b/lib/mobile-menu/style.css
@@ -1,5 +1,15 @@
 /**
  * Mobile Nav Styling
+ * 
+ * CSS & images originally developed by Astuteo
+ *
+ * http://astuteo.com/mobilemenu
+ *
+ * Adapted by Tom Finley
+ *
+ * https://github.com/electricbrick/Genesis-Mobile-Menu
+ * 
+ *
  */
  
 /* Mobile Nav - Desktop Attributes
