Left out JS credit

--- a/lib/mobile-menu/style.css
+++ b/lib/mobile-menu/style.css
@@ -1,7 +1,7 @@
 /**
  * Mobile Nav Styling
  * 
- * CSS & images originally developed by Astuteo
+ * CSS, JS, & images originally developed by Astuteo
  *
  * http://astuteo.com/mobilemenu
  *
