Omitted critical Genesis hook
Set up dummy functions.php to demonstrate location of snippet

--- a/lib/mobile-menu/style.css
+++ b/lib/mobile-menu/style.css
@@ -5,7 +5,7 @@
  *
  * http://astuteo.com/mobilemenu
  *
- * Adapted by Tom Finley
+ * Adapted for Genesis/WordPress by Tom Finley
  *
  * https://github.com/electricbrick/Genesis-Mobile-Menu
  * 
