--- a/lib/mobile-menu/style.css
+++ b/lib/mobile-menu/style.css
@@ -1,69 +1,43 @@
 /**
  * Mobile Nav Styling
- * 
- * CSS, JS, & images originally developed by Astuteo
- *
- * http://astuteo.com/mobilemenu
- *
- * Adapted for Genesis/WordPress by Tom Finley
- *
- * https://github.com/electricbrick/Genesis-Mobile-Menu
- * 
- *
  */
  
 /* Mobile Nav - Desktop Attributes
 ------------------------------------------------------------ */
 
-#mobile-nav-wrapper { display: none; } /* hide the navigation button by default */
+#mobile-nav-wrapper, .page-template-page_landing-php #mobile-nav-wrapper { display: none; } /* hide the navigation button by default */
 
 @media only screen and (max-width: 800px) {
 	
 	/* Desktop Menu HIDE
 	-------------------------------------------------------- */
 	
-	.menu-primary, .menu-secondary, #header .menu  { display: none; }
+	.menu-primary, .menu-secondary, #header .menu, .widget_nav_menu  { display: none; }
 	
 	  /* Navigation Button
 	-------------------------------------------------------- */
 
-	.nav-button {
+	.menu-toggle {
 		display: block;
 		position: relative;
 		top: 8px;
 		left: 7px;
 		width: 50px;
 		height: 35px;		
-		background:  url('images/menu-icon-large.png'), #6E83B6; /* Old browsers */
-		background:  url('images/menu-icon-large.png'), -moz-linear-gradient(top, #6E83B6 0%, #233766 100%); /* FF3.6+ */
-		background:  url('images/menu-icon-large.png'), -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6E83B6), color-stop(100%,#233766)); /* Chrome,Safari4+ */
-		background:  url('images/menu-icon-large.png'), -webkit-linear-gradient(top, #6E83B6 0%,#233766 100%); /* Chrome10+,Safari5.1+ */
-		background:  url('images/menu-icon-large.png'), -o-linear-gradient(top, #6E83B6 0%,#233766 100%); /* Opera 11.10+ */
-		background:  url('images/menu-icon-large.png'), -ms-linear-gradient(top, #6E83B6 0%,#233766 100%); /* IE10+ */
-		background:  url('images/menu-icon-large.png'), linear-gradient(to bottom, #6E83B6 0%,#233766 100%); /* W3C */		
+		background:  transparent url('images/menu-icon-large.png'); /* Old browsers */
 		background-position: center -3px;
 		background-repeat: no-repeat;
 		background-size: 21px, 100%;
 		cursor: pointer;
 		border: 0 none;
-		border-bottom: 1px solid rgba(255,255,255,.1);
-		box-shadow: 0 0 4px rgba(0,0,0,.7) inset;
-		border-radius: 5px;
 		z-index: 999;
 		text-indent: -9999px;
 	}
-	.nav-button:hover { 
+	.menu-toggle:hover { 
 		background-color: rgba(0,0,0,.1); 
 	}
-	.nav-button.open {		
-		background:  url('images/menu-icon-large.png'), #6E83B6; /* Old browsers */
-		background:  url('images/menu-icon-large.png'), -moz-linear-gradient(top, #6E83B6 0%, #233766 100%); /* FF3.6+ */
-		background:  url('images/menu-icon-large.png'), -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6E83B6), color-stop(100%,#233766)); /* Chrome,Safari4+ */
-		background:  url('images/menu-icon-large.png'), -webkit-linear-gradient(top, #6E83B6 0%,#233766 100%); /* Chrome10+,Safari5.1+ */
-		background:  url('images/menu-icon-large.png'), -o-linear-gradient(top, #6E83B6 0%,#233766 100%); /* Opera 11.10+ */
-		background:  url('images/menu-icon-large.png'), -ms-linear-gradient(top, #6E83B6 0%,#233766 100%); /* IE10+ */
-		background:  url('images/menu-icon-large.png'), linear-gradient(to bottom, #6E83B6 0%,#233766 100%); /* W3C */	
-		
+	.menu-toggle.open {		
+		background:  transparent url('images/menu-icon-large.png'); /* Old browsers */
 		background-position: center -40px;
 		background-repeat: no-repeat;
 		background-size: 21px, 100%;
@@ -74,44 +48,41 @@
 	.logged-in #mobile-nav-wrapper {
 		position: relative;
 	}
-	
 	#mobile-nav-wrapper {
+		  background: #0087d0;
 		  clear: both;
 		  display: block;
-		  height: 50px;
+		  height: auto;
+		  margin: 0 0 10px;
 		  top: 0px;
 		  z-index: 9999;
 		  width: 100%;
 		  position: relative;
 		}
-	
+		
 	.mobile-label {
-	  left: 70px;
-	  line-height: 120%;
-	  position: relative;
-	  top: -25px;
-	  z-index: 1000;
-	  width: 60%;
+		color: #fff;
+		font-family: "myriad-pro", Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font-size: 18px;
+		font-weight: bold;
+		left: 70px;
+		line-height: 120%;
+		position: relative;
+		top: -21px;
+		width: 60%;
+		z-index: 1000;
 	}
-
 	input, label, select, textarea {
-	  font-size: 18px;
+		font-size: 18px;
 	}
-
-
 	#mobile-nav {
 		width: 100%;
 		float: none;
-		background:  #6E83B6; /* Old browsers */
-		background:  -moz-linear-gradient(top, #6E83B6 0%, #233766 100%); /* FF3.6+ */
-		background:  -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6E83B6), color-stop(100%,#233766)); /* Chrome,Safari4+ */
-		background:  -webkit-linear-gradient(top, #6E83B6 0%,#233766 100%); /* Chrome10+,Safari5.1+ */
-		background:  -o-linear-gradient(top, #6E83B6 0%,#233766 100%); /* Opera 11.10+ */
-		background:  -ms-linear-gradient(top, #6E83B6 0%,#233766 100%); /* IE10+ */
-		background:  linear-gradient(to bottom, #6E83B6 0%,#233766 100%); /* W3C */		
-		display: block;
-		height: 50px;
-		margin: -61px 0 0 0;
+        border-top: solid 1px #0087d0;
+        border-bottom: solid 1px #0087d0;
+		display: none;
+		height: auto;
+		margin: 0 0 20px 0;
 		padding: 0;
 		overflow: hidden;
 		box-shadow: 0 1px 2px rgba(0,0,0,.6);
@@ -121,24 +92,26 @@
 		clear: both;
 	}
 	#mobile-nav li {
-		display: none;
 		width: 100%;
-		font-family: Arial;
+		font-family: "aviano-sans",sans-serif;
+		background: #0087d0;
 	}
 	#mobile-nav li a {
 		display: block;
-		width: 90%;
+		width: 100%;
 		padding: 10px 5%;
-		font-size: 14px;
+		font-size: 18px;
 		font-weight: bold;
-		text-shadow: -1px -1px 0 rgba(0,0,0,.15);
 		color: white;
 		text-decoration: none;
 		border-bottom: 1px solid rgba(0,0,0,.2);
 		border-top: 1px solid rgba(255,255,255,.1); 
 	}
+	#mobile-nav > li > a {
+		text-shadow: 1px 1px 2px #000;
+	}
 	#mobile-nav li a:hover {
-		background-color: rgba(0,0,0,.5);
+		background: rgba(0,0,0,.5);
 		border-top-color: transparent;
 	}
 	#mobile-nav > li:first-child {
@@ -162,7 +135,7 @@
 		border-bottom-color: transparent;
 	}
 	#mobile-nav li.parent > a {
-		background: url('images/sub-menu-arrow-down.png') no-repeat 90% 50%;
+		background: #0087d0 url('images/sub-menu-arrow-down.png') no-repeat 90% 50%;
 		color: #fff;
 		float: right;
 	}
@@ -175,11 +148,15 @@
 		border-top: 0 none;
 		padding: 0;
 	}
+	#mobile-nav li ul.sub-menu li {
+		clear: both;
+	}
 	#mobile-nav li ul a {
 		border: 0 none;
-		font-size: 12px;
+		color: #f3f3f3;
+		font-size: 14px;
+		font-weight: bold;
 		padding: 10px 5%;
-		font-weight: normal;
 	}
 	#mobile-nav li:hover ul {
 		display: block;
