--- a/lib/mobile-menu/style.css
+++ b/lib/mobile-menu/style.css
@@ -1,5 +1,19 @@
 /**
  * Mobile Nav Styling
+ * 
+ * CSS & images originally developed by Astuteo
+ *
+ * http://astuteo.com/mobilemenu
+ *
+ * Genesis 2.0 compatible functions and JS developed by FAT MEDIA
+ *
+ * http://youneedfat.com/genesis-responsive-design-menu/
+ *
+ * Adapted for Genesis/WordPress by Tom Finley
+ *
+ * https://github.com/electricbrick/Genesis-Mobile-Menu
+ * 
+ *
  */
  
 /* Mobile Nav - Desktop Attributes
